# Local

danplugins/: .bash_profile  nautobot_config.py
danplugins/test/my_site/blog/: urls.py  views.py
danplugins/test/my_site/blog/templates/blog/: all-posts.html  base.html  index.html  post-detail.html
danplugins/test/my_site/my_site/: settings.py
danplugins/test/my_site/templates/: 404.html  base.html
danplugins/test/test2-plugin/: pyproject.toml
danplugins/test/test3plugin/: manage.py  pyproject.toml
danplugins/test/test3plugin/static/: app.css
danplugins/test/test3plugin/templates/: base.html
danplugins/test/test3plugin/test3plugin/: __init__.py  homepage.py  models.py  navigation.py  urls.py  views.py
danplugins/test/test3plugin/test3plugin/nautobot/project-static/docs/: 404.html  index.html  sitemap.xml
danplugins/test/test3plugin/test3plugin/nautobot/project-static/docs/additional-features/: caching.html  change-logging.html  config-contexts.html  graphql.html  healthcheck.html  job-scheduling-and-approvals.html  jobs.html  (+3 more)
danplugins/test/test3plugin/test3plugin/static/test3plugin/: all-posts.css  index.css  post-detail.css
danplugins/test/test3plugin/test3plugin/templates/test3plugin/inc/: all-posts.html  post-detail.html  post-item.html
danplugins/test_plugin/: README.md  __init__.py  pyproject.toml
danplugins/test_plugin/testplugin/: homepage.py  models.py  navigation.py  urls.py  views.py
danplugins/test_plugin/testplugin/test_plugin/: panel_example_example.html
danplugins/test_plugin/testplugin/tests/: test_models.py  test_views.py
(+158 files in other folders)
